seems-to-be-working mmap

--- a/P3a/README
+++ b/P3a/README
@@ -7,5 +7,5 @@ CSL-ID:
 
 Implementation Details: 
 
-User Space Memory Management (Malloc/Free/Dump) 
+User Space Memory Management Project (Malloc/Free/Dump) 
 Specification: http://pages.cs.wisc.edu/~cs537-1/projects/p3a.html
